/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The SecretMananger proto contains the artificts for Secrets administration
 * such as creation and deployment.
 */
syntax = "proto3";

package fonoster.secrets.v1beta1;

option go_package = "github.com/fonoster/fonoster/mods/secrets/fonoster/services/protos/secrets";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "common.proto";

service Secrets {
  // Lists Secret 
  rpc ListSecretsId (ListSecretIdRequest) returns (ListSecretIdResponse) {
    option (google.api.http) = { get: "/v1beta1/secrets" };
  };
  // Gets Secret with the Secret-name
  rpc GetSecret (GetSecretRequest) returns (GetSecretResponse) {
    option (google.api.http) = { get: "/v1beta1/secrets/{name}" };
  };
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse) {
    option (google.api.http) = { 
      post: "/v1beta1/secrets"
      body: "*"
    };
  };
  // Peforms a hard delete of the Secret resource
  rpc DeleteSecret (DeleteSecretRequest) returns (fonoster.common.v1beta1.Empty) {
    option (google.api.http) = { 
      delete: "/v1beta1/secrets/{name}"
    };
  };
}

message ListSecretIdRequest {
  // The maximum number of items in the list
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any
  string page_token = 2;

  // Level of detail of the individual entities (reserved)
  fonoster.common.v1beta1.View view = 3;
}

message ListSecretIdResponse {
  // List of Secrets
  repeated SecretName secrets = 1;
  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}

message GetSecretRequest {
  string name = 1;
  fonoster.common.v1beta1.View view = 2;
}

message GetSecretResponse {
  string name = 1;
  string secret = 2;
}

message CreateSecretRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\": \"mydbsecret\", \"secret\": \"s3cr3t\"}"
  };
  string name = 1;
  string secret = 2;
}

message CreateSecretResponse {
  string name = 1;
}

message DeleteSecretRequest {
  string name = 1;
}

message Secret {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\": \"mydbsecret\", \"secret\": \"s3cr3t\"}"
  };
  string name = 1;
  string secret = 2;
}

message SecretName {
  string name = 1;
}
